Travis YML fixed

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic 
 sudo: required
 
 services:
@@ -14,18 +15,10 @@ after_success:
     - docker build -t nileshb83/multi-nginx ./nginx
     - docker build -t nileshb83/multi-server ./server
     - docker build -t nileshb83/multi-worker ./worker
-
-# Login to Docker using docker id
-
-- echo "$DOCKER_PASSWORD" | docker login -u"$DOCKER_ID" --password-stdin
-
-# Push the images to doocker hub
-
-- docker push nileshb83/multi-client
-- docker push nileshb83/multi-nginx
-- docker push nileshb83/multi-server
-- docker push nileshb83/multi-worker
-
-
-
-    
+    # login in Docker
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+    # Push Images
+    - docker push nileshb83/multi-client
+    - docker push nileshb83/multi-nginx
+    - docker push nileshb83/multi-server
+    - docker push nileshb83/multi-worker
